@@ -1,0 +1,21 @@
+:css
+  .ux-datepicker { background-color: white }
+
+.ux-collapsible.collapsed.w40{ "data-on-expanded" => "box grey" }
+  %span
+    %a.button.fconfiguration{ href: '#' }= t('views.projects.call_logs.index.action.filter_settings')
+  .ux-content
+    = form_tag(project_call_logs_path(project), id: 'call-logs-form', method: :get) do
+      .field
+        %label Date
+        = text_field_tag :after, params[:after], placeholder: t('views.projects.call_logs.index.label.after'), class: %w(ux-custom-datepicker ux-datepicker w15)
+        %span -
+        = text_field_tag :before, params[:before], placeholder: t('views.projects.call_logs.index.label.before'), class: %w(ux-custom-datepicker ux-datepicker w15)
+      .field
+        = label_tag :call_flow_id, t('views.projects.call_logs.index.label.call_flow')
+        = select_tag :call_flow_id, options_for_select(call_flows_options(project), params[:call_flow_id]), class: 'w30'
+      %hr
+      .right
+        %a.button.ux-collapse-trigger= t('views.projects.call_logs.index.action.cancel')
+        %button.white{ type: 'submit' }= t('views.projects.call_logs.index.action.confirm')
+      .clear
